--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
         </nav>
     </header>
         <h2>Contact Me</h2>
-        <form>
+        <form action="https://formsubmit.co/sarnadey228@gmail.com" method="POST">
             <label for="name">Name:</label><br>
-            <input type="password" id="name"name="name"><br>
+            <input type="text" id="name"name="name"><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email"name="email"><br>
             <label for="message">Message:</label><br>
